# common-vector

./: Cargo.toml  README.md
src/: basic.rs  brush.rs  camera.rs  dot.rs  editor.rs  guideline.rs  lib.rs  main.rs  path.rs  polygon.rs  transform.rs  vertex.rs
src/shaders/: frag_primary.wgsl  test_shader.wgsl
