[package]
name = "common-vector"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
wgpu = "22.1.0"
pollster = "0.3.0"
floem = { git = "https://github.com/lapce/floem.git" }
winit = "0.29"
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
lyon_tessellation = "1.0.15"